Fixed input line height on mobile

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -295,4 +295,13 @@ h1.billing-title {
   .cta-img {
     margin: 0px auto 12px;
   }
+  .form-control::-webkit-input-placeholder {
+    line-height: 1.4em;
+  }
+  form-control:-moz-placeholder {
+    line-height: 1.4em;
+  }
+  form-control:-ms-input-placeholder {
+    line-height: 1.4em;
+  }
 }
